--- a/frontend/core/src/main/webapp/static/app/main/staticPageHeader.html
+++ b/frontend/core/src/main/webapp/static/app/main/staticPageHeader.html
@@ -5,7 +5,7 @@
     </button>
     <a href ng-if="isDatepickerVisible" id="today-link" ng-class="{'today-link-active': isTodayActive}">today</a>
   </div>
-  <div class="heading-container">
+  <div class="heading-container" ng-class="getHeadingClass()">
     <a href class="heading" ng-click="switchFeature()">{{getCurrentHeading()}}</a>
   </div>
   <div class="omni-button-container">
