Omnibar:  * added note and task edit to omnibar  * changed omni-button omnibar input label to button  * omni button :hover and :active colors  * removed unused omnibarFeature scope variable from dashboardDirective  * moved omnibar code from ItemsController to OmnibarController  * moved omnibar keyword code from NotesController to OmnibarController  * set showDateInput false on dateInputDirective $destroy event  * initialize newKeyword object in NotesController  * removed note and task edit  * removed featureChangedCallback from NotesController and TasksController  * refactoring

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -116,6 +116,8 @@
     <script src="static/app/main/ItemsController.js"></script>
     <script src="static/app/main/ItemsService.js"></script>
     <script src="static/app/main/MainController.js"></script>
+    <script src="static/app/main/OmnibarController.js"></script>
+    <script src="static/app/main/omnibarInputDirective.js"></script>
     <script src="static/app/main/FooterController.js"></script>
     <script src="static/app/main/PageNotFoundController.js"></script>
     <script src="static/app/main/SynchronizeService.js"></script>
