--- a/frontend/core/src/main/webapp/static/app/main/staticPageHeader.html
+++ b/frontend/core/src/main/webapp/static/app/main/staticPageHeader.html
@@ -9,8 +9,8 @@
     <a href class="heading" ng-click="switchFeature()">{{getCurrentHeading()}}</a>
   </div>
   <div class="omni-button-container">
-    <label class="omni-button" for="omnibar-input">
+    <button type="button" class="omni-button" ng-click="openOmnibar('search')">
       <span class="icon-logo-only"></span>
-    </label>
+    </button>
   </div>
 </nav>
