--- a/frontend/core/src/main/webapp/static/app/main/omnibar.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibar.html
@@ -3,7 +3,7 @@
   <form id="omnibar" role="form" name="addOmniItem" ng-submit="saveOmnibarText()" autocapitalize="none" autocorrect="off">
     <div class="form-group">
       <div ng-class="{'left-input-wrapper' : omnibarHasText() && !isItemEditMode}">
-        <input type="text" id="omnibar-input" class="simple-input form-control omnibar-input" ng-model="omnibarText.title" ng-keydown="omnibarKeyDown($event)" omnibar-input placeholder="{{getOmnibarInputPlaceholder()}}" maxlength="128" required>
+        <input type="text" id="omnibar-input" class="simple-input form-control omnibar-input" ng-model="omnibarText.title" ng-keydown="omnibarKeyDown($event)" omnibar-input dynamic-placeholder="{{getOmnibarInputPlaceholder()}}" maxlength="128" required>
       </div>
       <div ng-show="omnibarHasText() && !isItemEditMode" class="right-button-wrapper">
         <button id="omnibarX" class="button" type="button" ng-click="clearOmnibar()"><span class="icon-x"></span>
