--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -117,6 +117,7 @@
     <script src="static/app/main/ItemsService.js"></script>
     <script src="static/app/main/MainController.js"></script>
     <script src="static/app/main/OmnibarController.js"></script>
+    <script src="static/app/main/omnibarDirective.js"></script>
     <script src="static/app/main/omnibarInputDirective.js"></script>
     <script src="static/app/main/FooterController.js"></script>
     <script src="static/app/main/PageNotFoundController.js"></script>
