Added separate page for list editing, fixed settings page drawer drag. Lists switching by pressing header.

--- a/frontend/core/src/main/webapp/static/app/account/settings.html
+++ b/frontend/core/src/main/webapp/static/app/account/settings.html
@@ -1,5 +1,5 @@
 <div class="single-page-container">
-  <section id="settings" class="one-column-grid single-page page" ng-controller="SettingsController" snap-drawer-drag="account">
+  <section id="settings" class="one-column-grid single-page page" ng-controller="SettingsController" snap-drawer-drag="settings">
     <div class="column">
       <div ng-hide="omnibarVisible" class="content-container page-content-container">
         <ul>
