Fixed invalid space character in LESS file

--- a/frontend/core/src/main/webapp/static/app/auth/menu.html
+++ b/frontend/core/src/main/webapp/static/app/auth/menu.html
@@ -27,7 +27,7 @@
         </li>
         <li class="list list-last">
           <span class="left-margin"></span>
-          <a href class="list-link edit-list-link" ng-class="getEditListsClass()" ng-click="gotoFeature('editLists')">edit lists...</a>
+          <a href class="list-link edit-lists-link" ng-class="getEditListsClass()" ng-click="gotoFeature('editLists')">edit lists...</a>
         </li>
       </ul>
     </li>
