Fixed scrolling to add item.. element on keywords, contexts and lists.

--- a/frontend/core/src/main/webapp/static/app/auth/menu.html
+++ b/frontend/core/src/main/webapp/static/app/auth/menu.html
@@ -39,7 +39,7 @@
       <a href class="system-link" ng-class="getFeatureClass('dashboard')" ng-click="gotoFeature('dashboard')">dashboard</a>
     </li>
     <li>
-      <a href class="system-link" ng-class="getFeatureClass('settings')" ng-click="gotoFeature('settings')">settings</a>
+      <a href class="system-link list-last" ng-class="getFeatureClass('settings')" ng-click="gotoFeature('settings')">settings</a>
     </li>
   </ul>
 </div>
