--- a/frontend/core/src/main/webapp/static/app/base/editLists.html
+++ b/frontend/core/src/main/webapp/static/app/base/editLists.html
@@ -2,7 +2,7 @@
   <section id="edit-lists" class="one-column-grid single-page page" snap-drawer-drag="editLists" ng-init="newList = {};">
     <div class="column">
       <div ng-hide="omnibarVisible" class="content-container page-content-container">
-        <div class="inner-page-content-container" swiper-prevent>
+        <div class="inner-page-content-container" scroll-to swiper-prevent>
           <div scroll-to accordion>
             <div ng-repeat="list in lists">
               <div accordion-title="list" edit-item="editList(list)" edit-item-inline="true" edit-item-fields="editListFields(list)" has-complete="false" toggle-complete></div>
@@ -29,6 +29,12 @@
                 </div>
               </div>
             </div>
+            <form class="add-element" role="form" name="addListForm" ng-submit="callAndRefresh(addList, newList)" autocapitalize="none" autocorrect="off" add-item>
+              <div class="form-group" editable-field-container="disable">
+                <label class="sr-only" for="listTitle">title</label>
+                <input type="text" id="listTitle" class="simple-input" ng-model="newList.title" ng-blur="blurredAddItemElement()" ng-focus="focusedAddItemElement()" placeholder="add list..." editable-field/>
+              </div>
+            </form>
           </div>
         </div>
       </div>
