--- a/frontend/core/src/main/webapp/static/app/base/lists.html
+++ b/frontend/core/src/main/webapp/static/app/base/lists.html
@@ -2,7 +2,7 @@
   <section id="lists" class="one-column-grid single-page page" snap-drawer-drag="lists" ng-init="newList = {};">
     <div class="column">
       <div ng-hide="omnibarVisible" class="content-container page-content-container">
-        <div class="inner-page-content-container" swiper-prevent>
+        <div class="inner-page-content-container" scroll-to swiper-prevent>
           <section>
             <ul>
               <li ng-repeat="list in lists">
