--- a/frontend/core/src/main/webapp/static/app/tasks/contexts.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/contexts.html
@@ -1,12 +1,12 @@
 <section id="tasks-contexts" class="two-column-grid page">
   <div class="column">
-    <div ng-hide="omnibarVisible && isActiveSlide('contexts')" class="content-container page-content-container" scroll-to>
-      <div class="inner-page-content-container" swiper-prevent>
+    <div ng-hide="omnibarVisible && isActiveSlide('contexts')" class="content-container page-content-container">
+      <div class="inner-page-content-container" scroll-to swiper-prevent>
         <section ng-init="newContext={title:undefined, tagType:'context'}">
           <h3>contexts</h3>
           <ul>
             <li ng-show="contexts.length" ng-repeat="context in contexts">
-              <a href class="click-to-slide" ng-click="showContextDetails(context)">
+              <a href class="click-to-slide" swiper-click="showContextDetails(context)">
                 <span class="link-title">@{{context.title}}</span><span class="icon-arrow-right"></span>
               </a>
             </li>
