Fixed menu bottom padding

--- a/frontend/core/src/main/webapp/static/app/auth/menu.html
+++ b/frontend/core/src/main/webapp/static/app/auth/menu.html
@@ -38,8 +38,8 @@
     <li>
       <a href class="system-link" ng-class="getFeatureClass('dashboard')" ng-click="gotoFeature('dashboard')">dashboard</a>
     </li>
-    <li>
-      <a href class="system-link list-last" ng-class="getFeatureClass('settings')" ng-click="gotoFeature('settings')">settings</a>
+    <li class="menu-last">
+      <a href class="system-link" ng-class="getFeatureClass('settings')" ng-click="gotoFeature('settings')">settings</a>
     </li>
   </ul>
 </div>
