Changed add note... to use omnibar input

--- a/frontend/core/src/main/webapp/static/app/main/listNotes.html
+++ b/frontend/core/src/main/webapp/static/app/main/listNotes.html
@@ -15,7 +15,7 @@
             </div>
             <div ng-if="!note.content" class="teaser-empty"></div>
           </div>
-          <div ng-include="'static/app/notes/addNote.html'"></div>
+          <button class="add-button" ng-click="editNote({})">add note...</button>
         </div>
       </div>
     </div>
