--- a/frontend/core/src/main/webapp/static/app/account/settings.html
+++ b/frontend/core/src/main/webapp/static/app/account/settings.html
@@ -1,4 +1,4 @@
-<div class="single-page-container">
+<div class="single-page-container" ng-class="isFooterVisible ? 'show-footer' : 'hide-footer'">
   <section id="settings" class="one-column-grid single-page page" ng-controller="SettingsController" snap-drawer-drag="settings">
     <div class="column">
       <div ng-hide="omnibarVisible" class="content-container page-content-container">
