--- a/frontend/core/src/main/webapp/static/app/main/footer.html
+++ b/frontend/core/src/main/webapp/static/app/main/footer.html
@@ -1,20 +1,33 @@
 <nav id="{{getActiveFeature()}}-footer" class="swiper-no-swiping" role="navigation" ng-controller="FooterController">
-  <ul class="horizontally-justified">
+
+  <ul ng-if="hasVisibleToasterNotification()" class="horizontally-justified omnibar-toast-notification">
+    <li id="left-slide-link" class="justified-element">
+      <span>saved to </span>
+      <a href ng-click="gotoOmnibarSavedToFeatureAndCall(toasterNotification.location, hideOmnibarToastNotification)">{{toasterNotification.location}}</a>
+    </li>
+
+    <li id="right-slide-link" class="justified-element">
+      <a href class="toaster-x-mark" ng-click="hideOmnibarToastNotification()">&#x2716</a>
+    </li>
+    <li id="stretch"></li>
+  </ul>
+
+  <ul ng-if="featureHasFooter()" class="horizontally-justified">
     <li id="left-slide-link" class="justified-element">
       <a href ng-class="isActiveSlide(getLeftSlideName()) && 'active-slide'" ng-click="gotoLeftSlide()">
-        <span>{{getLeftSlideHeading()}}</span>
+        <span ng-bind="getLeftSlideHeading()"></span>
       </a>
     </li>
 
     <li ng-if="hasCenterSlide()" id="center-slide-link" class="justified-element">
       <a href ng-class="isActiveSlide(getCenterSlideName()) && 'active-slide'" ng-click="gotoCenterSlide()">
-        <span>{{getCenterSlideHeading()}}</span>
+        <span ng-bind="getCenterSlideHeading()"></span>
       </a>
     </li>
 
     <li id="right-slide-link" class="justified-element">
       <a href ng-class="isActiveSlide(getRightSlideName()) && 'active-slide'" ng-click="gotoRightSlide()">
-        <span>{{getRightSlideHeading()}}</span>
+        <span ng-bind="getRightSlideHeading()"></span>
       </a>
     </li>
     <li id="stretch"></li>
